--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#home">首页</a></li>
             <li><a href="#about">关于我</a></li>
             <li><a href="#portfolio">作品集</a></li>
+            <li><a href="https://blog.fangwuxin.com">博客</a></li>
             <li><a href="#contact">联系方式</a></li>
         </ul>
     </nav>
