--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <!-- 导航栏 -->
     <nav class="navbar">
         <div class="nav-brand">方勿信</div>
+        <button class="mobile-menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
         <ul class="nav-links">
             <li><a href="#home">首页</a></li>
             <li><a href="#about">关于我</a></li>
