--- a/notes/personal_ip/01.html
+++ b/notes/personal_ip/01.html
@@ -300,7 +300,7 @@
 
         .flow-step {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             gap: 20px;
             position: relative;
         }
@@ -323,6 +323,7 @@
             align-items: center;
             justify-content: center;
             font-weight: 600;
+            flex-shrink: 0;
         }
 
         .flow-step-title {
@@ -342,7 +343,7 @@
             left: 15px;
             top: 40px;
             width: 2px;
-            height: calc(100% + 10px);
+            height: calc(100% - 10px);
             background: #0984e3;
             opacity: 0.2;
         }
@@ -520,16 +521,48 @@
                 grid-template-columns: 1fr;
             }
 
+            .flow-chart {
+                padding: 15px;
+                margin: 20px 0;
+            }
+
+            .flow-steps {
+                gap: 25px;
+            }
+
             .flow-step {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 15px;
+                padding-left: 45px;
+                position: relative;
+            }
+
+            .flow-step-number {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 28px;
+                height: 28px;
+                font-size: 0.9em;
+            }
+
+            .flow-step-content {
+                padding: 12px;
+                width: 100%;
+            }
+
+            .flow-step-title {
+                font-size: 1em;
+                margin-bottom: 4px;
+            }
+
+            .flow-step-desc {
+                font-size: 0.85em;
+                line-height: 1.5;
             }
 
             .flow-step:not(:last-child):after {
-                left: 15px;
-                top: 40px;
-                height: calc(100% - 10px);
+                left: 13px;
+                top: 35px;
+                height: calc(100% - 15px);
             }
 
             .ideal-type-card {
@@ -566,6 +599,34 @@
 
             .card-title {
                 font-size: 1.3em;
+            }
+
+            .flow-chart {
+                padding: 12px;
+                margin: 15px 0;
+            }
+
+            .flow-steps {
+                gap: 20px;
+            }
+
+            .flow-step {
+                padding-left: 40px;
+            }
+
+            .flow-step-number {
+                width: 24px;
+                height: 24px;
+                font-size: 0.85em;
+            }
+
+            .flow-step-content {
+                padding: 10px;
+            }
+
+            .flow-step:not(:last-child):after {
+                left: 11px;
+                top: 30px;
             }
         }
     </style>
