--- a/notes/personal_ip/02.html
+++ b/notes/personal_ip/02.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>持续有影响力的IP - 视觉笔记</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #006BAC;
+            --primary-light: rgba(0, 107, 172, 0.1);
+            --text-primary: #222222;
+            --text-secondary: #444444;
+            --bg-color: #FBFEFB;
+            --card-bg: #f5f5f5;
+            --hover-color: #0085d4;
+            --border-color: #e0e0e0;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -12,10 +26,10 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: 'Noto Serif SC', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             line-height: 1.6;
-            background: #f8f9fa;
-            color: #2d3436;
+            background: var(--bg-color);
+            color: var(--text-primary);
             padding: 30px 20px;
         }
 
@@ -30,7 +44,7 @@
         }
 
         .visual-note {
-            background: white;
+            background: var(--card-bg);
             border-radius: 20px;
             padding: 40px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -48,13 +62,13 @@
 
         .central-topic {
             text-align: center;
-            background: linear-gradient(135deg, #0984e3, #00a8ff);
+            background: linear-gradient(135deg, var(--primary-color), var(--hover-color));
             color: white;
             padding: 20px 40px;
             border-radius: 16px;
             font-size: 1.5em;
             font-weight: bold;
-            box-shadow: 0 10px 20px rgba(9, 132, 227, 0.2);
+            box-shadow: 0 10px 20px rgba(0, 107, 172, 0.2);
             position: relative;
             z-index: 2;
             min-width: 300px;
@@ -71,7 +85,7 @@
 
         .subtopic {
             flex: 1;
-            background: white;
+            background: var(--card-bg);
             border-radius: 16px;
             padding: 20px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
@@ -92,7 +106,7 @@
             left: 10%;
             right: 10%;
             height: 2px;
-            background: #636e72;
+            background: var(--text-secondary);
         }
 
         .subtopic::before {
@@ -110,7 +124,7 @@
             font-size: 1.8em;
             width: 45px;
             height: 45px;
-            background: rgba(9, 132, 227, 0.1);
+            background: var(--primary-light);
             border-radius: 12px;
             display: flex;
             align-items: center;
@@ -121,11 +135,11 @@
         .subtopic-title {
             font-size: 1.2em;
             font-weight: bold;
-            color: #2d3436;
+            color: var(--text-primary);
         }
 
         .subtopic-content {
-            color: #636e72;
+            color: var(--text-secondary);
         }
 
         .sub-points {
@@ -134,15 +148,15 @@
         }
 
         .highlight {
-            background: rgba(9, 132, 227, 0.1);
+            background: var(--primary-light);
             padding: 2px 6px;
             border-radius: 4px;
-            color: #0984e3;
+            color: var(--primary-color);
             font-weight: 500;
         }
 
         .card {
-            background: white;
+            background: var(--card-bg);
             border-radius: 16px;
             padding: 25px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
@@ -158,7 +172,7 @@
 
         .card-title {
             font-size: 1.4em;
-            color: #2d3436;
+            color: var(--text-primary);
             margin-bottom: 20px;
             display: flex;
             align-items: center;
@@ -175,30 +189,30 @@
             margin-bottom: 15px;
             padding-left: 25px;
             position: relative;
-            color: #636e72;
+            color: var(--text-secondary);
         }
 
         .detail-list li:before {
             content: '•';
             position: absolute;
             left: 0;
-            color: #0984e3;
+            color: var(--primary-color);
             font-weight: bold;
         }
 
         .detail-list strong {
-            color: #2d3436;
+            color: var(--text-primary);
             display: block;
             margin-bottom: 5px;
         }
 
         .source-attribution {
             text-align: center;
-            color: #636e72;
+            color: var(--text-secondary);
             font-size: 0.9em;
             margin-bottom: 40px;
             padding-top: 20px;
-            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            border-top: 1px solid var(--border-color);
         }
 
         @media (max-width: 768px) {
