--- a/notes/personal_ip/01.html
+++ b/notes/personal_ip/01.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人IP的本质</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #006BAC;
+            --primary-light: rgba(0, 107, 172, 0.1);
+            --text-primary: #222222;
+            --text-secondary: #444444;
+            --bg-color: #FBFEFB;
+            --card-bg: #f5f5f5;
+            --hover-color: #0085d4;
+            --border-color: #e0e0e0;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -12,10 +26,10 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: 'Noto Serif SC', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             line-height: 1.6;
-            background: #f8f9fa;
-            color: #2d3436;
+            background: var(--bg-color);
+            color: var(--text-primary);
             padding: 30px 20px;
         }
 
@@ -44,14 +58,14 @@
 
         .header h1 {
             font-size: 2.8em;
-            color: #2d3436;
+            color: var(--text-primary);
             display: flex;
             align-items: center;
             gap: 10px;
         }
 
         .header .subtitle {
-            color: #636e72;
+            color: var(--text-secondary);
             font-size: 1.3em;
             position: relative;
             padding-bottom: 20px;
@@ -65,7 +79,7 @@
             transform: translateX(-50%);
             width: 60px;
             height: 3px;
-            background: #0984e3;
+            background: var(--primary-color);
         }
 
         .content-flow {
@@ -80,7 +94,7 @@
             gap: 20px;
             align-items: center;
             margin-bottom: 25px;
-            background: rgba(9, 132, 227, 0.08);
+            background: var(--primary-light);
             border-radius: 20px;
             padding: 25px;
         }
@@ -91,7 +105,7 @@
         }
 
         .vs-badge {
-            background: #0984e3;
+            background: var(--primary-color);
             color: white;
             padding: 8px 12px;
             border-radius: 16px;
@@ -112,7 +126,7 @@
             top: 50%;
             width: 20px;
             height: 2px;
-            background: #0984e3;
+            background: var(--primary-color);
         }
 
         .vs-badge:before {
@@ -126,7 +140,7 @@
         }
 
         .card {
-            background: white;
+            background: var(--card-bg);
             border-radius: 16px;
             padding: 25px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
@@ -150,15 +164,15 @@
         }
 
         .essence-card {
-            background: linear-gradient(135deg, #0984e3, #00a8ff);
+            background: var(--primary-color);
             color: white;
             margin: 0;
-            box-shadow: 0 12px 24px rgba(9, 132, 227, 0.15);
+            box-shadow: 0 12px 24px rgba(0, 107, 172, 0.15);
         }
 
         .essence-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 20px 40px rgba(9, 132, 227, 0.2);
+            box-shadow: 0 20px 40px rgba(0, 107, 172, 0.2);
         }
 
         .essence-card .card-title {
@@ -179,20 +193,26 @@
         .example-item {
             padding: 15px;
             border-radius: 12px;
-            background: rgba(9, 132, 227, 0.05);
-            border-left: 4px solid #0984e3;
+            background: var(--primary-light);
+            border-left: 4px solid var(--primary-color);
             transition: all 0.3s ease;
         }
 
         .example-item:hover {
-            background: rgba(9, 132, 227, 0.1);
+            background: rgba(0, 107, 172, 0.15);
             transform: translateX(5px);
         }
 
         .warning-card {
-            background: linear-gradient(135deg, #ff7675, #ff4757);
+            background: #FF6B01;
             color: white;
             margin-top: 25px;
+            box-shadow: 0 12px 24px rgba(255, 107, 1, 0.15);
+        }
+
+        .warning-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 20px 40px rgba(255, 107, 1, 0.2);
         }
 
         .warning-card .card-title {
@@ -215,7 +235,7 @@
             content: '•';
             position: absolute;
             left: 0;
-            color: #0984e3;
+            color: var(--primary-color);
             font-weight: bold;
         }
 
@@ -231,7 +251,7 @@
         }
 
         .ideal-type-card {
-            background: white;
+            background: var(--card-bg);
             border-radius: 16px;
             padding: 35px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
@@ -256,8 +276,8 @@
 
         .ideal-type-icon {
             font-size: 2.2em;
-            color: #0984e3;
-            background: rgba(9, 132, 227, 0.1);
+            color: var(--primary-color);
+            background: var(--primary-light);
             width: 60px;
             height: 60px;
             border-radius: 16px;
@@ -269,11 +289,11 @@
         .ideal-type-title {
             font-size: 1.5em;
             font-weight: 600;
-            color: #2d3436;
+            color: var(--text-primary);
         }
 
         .ideal-type-content {
-            color: #636e72;
+            color: var(--text-secondary);
             font-size: 1.1em;
             line-height: 1.6;
         }
@@ -281,13 +301,13 @@
         .ideal-type-details {
             margin-top: 0;
             padding-top: 20px;
-            border-top: 1px dashed rgba(9, 132, 227, 0.2);
+            border-top: 1px dashed var(--border-color);
         }
 
         .flow-chart {
             margin: 25px 0;
             padding: 20px;
-            background: rgba(9, 132, 227, 0.03);
+            background: var(--primary-light);
             border-radius: 16px;
         }
 
@@ -307,7 +327,7 @@
 
         .flow-step-content {
             flex: 1;
-            background: white;
+            background: var(--card-bg);
             padding: 15px;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
@@ -316,7 +336,7 @@
         .flow-step-number {
             width: 32px;
             height: 32px;
-            background: #0984e3;
+            background: var(--primary-color);
             color: white;
             border-radius: 50%;
             display: flex;
@@ -328,12 +348,12 @@
 
         .flow-step-title {
             font-weight: 600;
-            color: #2d3436;
+            color: var(--text-primary);
             margin-bottom: 5px;
         }
 
         .flow-step-desc {
-            color: #636e72;
+            color: var(--text-secondary);
             font-size: 0.9em;
         }
 
@@ -359,13 +379,15 @@
         .ideal-type-steps li {
             padding-left: 25px;
             position: relative;
+            color: var(--text-secondary);
         }
 
         .ideal-type-steps li:before {
-            content: '→';
+            content: '•';
             position: absolute;
             left: 0;
-            color: #0984e3;
+            color: var(--primary-color);
+            font-weight: bold;
         }
 
         .section-title {
@@ -381,7 +403,7 @@
         }
 
         .summary-card {
-            background: white;
+            background: var(--card-bg);
             border-radius: 16px;
             padding: 35px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
@@ -420,7 +442,7 @@
         .point-content strong {
             display: block;
             margin-bottom: 10px;
-            color: #2d3436;
+            color: var(--text-primary);
             font-size: 1.2em;
         }
 
@@ -434,14 +456,14 @@
             position: relative;
             padding-left: 20px;
             margin-bottom: 8px;
-            color: #636e72;
+            color: var(--text-secondary);
         }
 
         .point-content li:before {
             content: '•';
             position: absolute;
             left: 0;
-            color: #0984e3;
+            color: var(--primary-color);
         }
 
         .point-content p {
@@ -451,11 +473,11 @@
 
         .source-attribution {
             text-align: center;
-            color: #636e72;
+            color: var(--text-secondary);
             font-size: 0.9em;
             margin-bottom: 40px;
             padding-top: 20px;
-            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            border-top: 1px solid var(--border-color);
         }
 
         @media (max-width: 768px) {
