--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                     <div class="note-item">
                         <div class="note-category">#Personal IP</div>
                         <h3>
+                            <a href="notes/personal_ip/03.html">IP量级的四个层次</a>
+                        </h3>
+                        <div class="note-preview">
+                            <p>从普通人到超级IP的成长路径，详解IP量级的四个层次及如何逐步提升。</p>
+                        </div>
+                    </div>
+                    <div class="note-item">
+                        <div class="note-category">#Personal IP</div>
+                        <h3>
                             <a href="notes/personal_ip/02.html">如何打造持续有影响力的IP？</a>
                         </h3>
                         <div class="note-preview">
