调整目录层级，添加02-01页面

--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@
                     <div class="note-item">
                         <div class="note-category">#Personal IP</div>
                         <h3>
-                            <a href="notes/personal_ip/04.html">规划：如何设计一个产品？</a>
+                            <a href="notes/personal_ip/02_Positioning of high business value IP/01.html">定位前要做哪些自我梳理</a>
+                        </h3>
+                        <div class="note-preview">
+                            <p>从认识自己、接纳自己到放大自己，通过三步骤梳理你的职业成就、兴趣爱好与先天优势。</p>
+                        </div>
+                    </div>
+                    <div class="note-item">
+                        <div class="note-category">#Personal IP</div>
+                        <h3>
+                            <a href="notes/personal_ip/01_Underlying logic and cognition/04.html">规划：如何设计一个产品？</a>
                         </h3>
                         <div class="note-preview">
                             <p>探索产品设计的三大步骤与四个指导原则，从规划到进化打造优秀产品。</p>
@@ -90,7 +99,7 @@
                     <div class="note-item">
                         <div class="note-category">#Personal IP</div>
                         <h3>
-                            <a href="notes/personal_ip/03.html">目标：你要成为大IP、中IP还是小IP？</a>
+                            <a href="notes/personal_ip/01_Underlying logic and cognition/03.html">目标：你要成为大IP、中IP还是小IP？</a>
                         </h3>
                         <div class="note-preview">
                             <p>从普通人到超级IP的成长路径，详解IP量级的四个层次及如何逐步提升。</p>
@@ -99,7 +108,7 @@
                     <div class="note-item">
                         <div class="note-category">#Personal IP</div>
                         <h3>
-                            <a href="notes/personal_ip/02.html">打造：成为一个持续有影响力的IP</a>
+                            <a href="notes/personal_ip/01_Underlying logic and cognition/02.html">打造：成为一个持续有影响力的IP</a>
                         </h3>
                         <div class="note-preview">
                             <p>深入解析如何构建持续有影响力的个人IP。</p>
@@ -108,7 +117,7 @@
                     <div class="note-item">
                         <div class="note-category">#Personal IP</div>
                         <h3>
-                            <a href="notes/personal_ip/01.html">定义：彻底理解个人IP的本质</a>
+                            <a href="notes/personal_ip/01_Underlying logic and cognition/01.html">定义：彻底理解个人IP的本质</a>
                         </h3>
                         <div class="note-preview">
                             <p>深入探讨个人IP的本质，从定义到实践，帮助你建立属于自己的个人品牌。</p>
