调整标签，优化页面加载速度

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4444131_7mxe0ib0yc8.css">
 </head>
 <body>
     <!-- 导航栏 -->
@@ -79,7 +78,7 @@
                 <h2>Recent Posts</h2>
                 <div class="notes-list">
                     <div class="note-item">
-                        <div class="note-category">#Personal IP</div>
+                        <div class="note-category">#Personal IP/02_Positioning</div>
                         <h3>
                             <a href="notes/personal_ip/02_Positioning of high business value IP/01.html">定位前要做哪些自我梳理</a>
                         </h3>
@@ -88,7 +87,7 @@
                         </div>
                     </div>
                     <div class="note-item">
-                        <div class="note-category">#Personal IP</div>
+                        <div class="note-category">#Personal IP/01_Underlying</div>
                         <h3>
                             <a href="notes/personal_ip/01_Underlying logic and cognition/04.html">规划：如何设计一个产品？</a>
                         </h3>
@@ -97,7 +96,7 @@
                         </div>
                     </div>
                     <div class="note-item">
-                        <div class="note-category">#Personal IP</div>
+                        <div class="note-category">#Personal IP/01_Underlying</div>
                         <h3>
                             <a href="notes/personal_ip/01_Underlying logic and cognition/03.html">目标：你要成为大IP、中IP还是小IP？</a>
                         </h3>
@@ -106,7 +105,7 @@
                         </div>
                     </div>
                     <div class="note-item">
-                        <div class="note-category">#Personal IP</div>
+                        <div class="note-category">#Personal IP/01_Underlying</div>
                         <h3>
                             <a href="notes/personal_ip/01_Underlying logic and cognition/02.html">打造：成为一个持续有影响力的IP</a>
                         </h3>
@@ -115,7 +114,7 @@
                         </div>
                     </div>
                     <div class="note-item">
-                        <div class="note-category">#Personal IP</div>
+                        <div class="note-category">#Personal IP/01_Underlying</div>
                         <h3>
                             <a href="notes/personal_ip/01_Underlying logic and cognition/01.html">定义：彻底理解个人IP的本质</a>
                         </h3>
